# OsirisGenealogy

./: Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
.github/workflows/: pages.yml
assets/: sw.js
assets/files/: gedcom.json
src/: app.rs  app_state.rs  main.rs
src/gui/: fonts.rs  main_frame.rs  menu_bar.rs  mod.rs
src/gui/charts/: mod.rs  sun_burst.rs
src/model/: file.rs
