[package]
name = "osiris_genealogy"
version = "0.0.1"
authors = ["Julien Denozi"]
edition = "2021"
rust-version = "1.72"


[dependencies]
egui = "0.24.1"
eframe = { version = "0.24.1", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
log = "0.4"
rfd = "0.12.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.99"
rand = { version = "0.8.5", features = [] }
# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
